PROJECT(MPRGPSolver)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -DHAVE_NAMESPACES -ldl -Wall -std=c++11")
# SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -g -O0 -Wall -std=c++11")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE( Boost COMPONENTS filesystem system REQUIRED)

ADD_DEFINITIONS(-DUTILITY_ASSERT)
ADD_DEFINITIONS(-DUTILITY_LOG)
ADD_DEFINITIONS(-DUTILITY_TIMER)

ADD_DEFINITIONS(-DDEBUG_FUN)
ADD_DEFINITIONS(-DLOG_INFO)
ADD_DEFINITIONS(-DLOG_ERROR)
ADD_DEFINITIONS(-DLOG_WARN)
ADD_DEFINITIONS(-DLOG_DEBUG)
ADD_DEFINITIONS(-DLOG_TRACE)
ADD_DEFINITIONS(-DUSE_FUNC_TIMER)

FIND_PACKAGE(Eigen3 REQUIRED)
IF(EIGEN3_FOUND)
  INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
ENDIF(EIGEN3_FOUND)

INCLUDE_DIRECTORIES(
  
  /usr/local/include
  /usr/local/include/utility
  ${PROJECT_SOURCE_DIR}/src
  /home/simba/Workspace/CommonFile
  )

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test_case)